Test adaptions to make it compile